--- a/NoDecentDiary/Pages/Index.razor
+++ b/NoDecentDiary/Pages/Index.razor
@@ -1,5 +1,40 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<MAppBar App
+         Elevation="0"
+         Dense
+         Color="transparent">
+    <MSpacer></MSpacer>
+    <MButton Large Icon>
+        <MIcon>mdi-magnify</MIcon>
+    </MButton>
+</MAppBar>
 
-Welcome to your new app.
+<div class="mb-8 px-2">
+    <MSubheader Class="px-0">
+        @(DateTime.Now.ToString("MM/dd") + " 星期二")
+    </MSubheader>
+    <h3>早上好，又是全新的一天</h3>
+</div>
+
+@foreach (var item in Diaries)
+{
+    <DiaryCard Date="(item.CreateTime)"
+           Title="@(item.Title)"
+           Text="@(item.Content)">
+    </DiaryCard>
+}
+
+<FabTransition>
+    <MButton Color="black"
+             Class="mb-10"
+             Dark
+             Absolute
+             Bottom
+             Right
+             Fab>
+        <MIcon>
+            mdi-pencil
+        </MIcon>
+    </MButton>
+</FabTransition>
