--- a/NoDecentDiary/Shared/MainLayout.razor
+++ b/NoDecentDiary/Shared/MainLayout.razor
@@ -17,6 +17,12 @@
                                 <MListItemTitle>@navigationButton.Title</MListItemTitle>
                             </MListItem>
                         }
+                        <MListItem>
+                            <MListItemIcon>
+                                <MIcon>mdi-magnify</MIcon>
+                            </MListItemIcon>
+                            <MListItemTitle>搜索</MListItemTitle>
+                        </MListItem>
                     </MListItemGroup>
                 </MList>
             </MNavigationDrawer>
