优化了应用栏在桌面端和移动端的表现方式

--- a/NoDecentDiary/Pages/Index.razor
+++ b/NoDecentDiary/Pages/Index.razor
@@ -1,7 +1,18 @@
 ﻿@page "/"
 
 
-<AppBar></AppBar>
+<AppBar>
+    <MobileContent>
+        <MAppBar App
+                 Elevation="0"
+                 Color="white">
+            <MSpacer></MSpacer>
+            <MButton Large Icon>
+                <MIcon>mdi-magnify</MIcon>
+            </MButton>
+        </MAppBar>
+    </MobileContent>
+</AppBar>
 
 <div class="mb-8 px-2">
     <MSubheader Class="px-0">
