--- a/NoDecentDiary/Pages/PageLog.razor
+++ b/NoDecentDiary/Pages/PageLog.razor
@@ -1,16 +1,28 @@
 ﻿@page "/Log"
 
-<MAppBar App>
-    <MButton Icon>
-        <MIcon>
-            mdi-arrow-left
-        </MIcon>
-    </MButton>
+<AppBar>
+    <DesktopContent>
+        <MBreadcrumbs Large>
+            <MBreadcrumbsItem Href="/components/breadcrumbs">Dashboard</MBreadcrumbsItem>
+            <MBreadcrumbsItem Href="/components/breadcrumbs" Text="Link 1"></MBreadcrumbsItem>
+            <MBreadcrumbsItem Href="/components/breadcrumbs" Disabled>Link 2</MBreadcrumbsItem>
+        </MBreadcrumbs>
+    </DesktopContent>
+    <MobileContent>
+        <MAppBar App>
+            <MButton Icon>
+                <MIcon>
+                    mdi-arrow-left
+                </MIcon>
+            </MButton>
 
-    <MToolbarTitle>查看日志文件</MToolbarTitle>
+            <MToolbarTitle>查看日志文件</MToolbarTitle>
 
-    <MSpacer></MSpacer>
-</MAppBar>
+            <MSpacer></MSpacer>
+        </MAppBar>
+    </MobileContent>
+</AppBar>
+
 @if (!LogTextList.Any())
 {
     <div>
