--- a/NoDecentDiary/Shared/AppBar.razor
+++ b/NoDecentDiary/Shared/AppBar.razor
@@ -1,11 +1,8 @@
-﻿@if (!MasaBlazor!.Breakpoint.SmAndUp)
+﻿@if (MasaBlazor!.Breakpoint.SmAndUp)
 {
-    <MAppBar App
-         Elevation="0"
-         Color="white">
-        <MSpacer></MSpacer>
-        <MButton Large Icon>
-            <MIcon>mdi-magnify</MIcon>
-        </MButton>
-    </MAppBar>
+    @DesktopContent
+}
+else
+{
+    @MobileContent
 }
