--- a/NoDecentDiary/Pages/PageWrite.razor.css
+++ b/NoDecentDiary/Pages/PageWrite.razor.css
@@ -1,7 +1,12 @@
-﻿@media screen and (min-width:600px) {
+﻿.write-overflow {
+    overflow: hidden;
+}
+
+@media screen and (min-width:600px) {
     .write-textarea{
-        border:1px solid;
-        border-radius:12px;
         max-height:50vh;
+    }
+    .write-overflow{
+        overflow:inherit;
     }
 }
