feat(MultiDisplay) : AppBar rename MultiDisplay

--- a/NoDecentDiary/Pages/Index.razor
+++ b/NoDecentDiary/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<AppBar>
+<MultiDisplay>
     <MobileContent>
         <MAppBar App
                  Dense
@@ -13,7 +13,7 @@
             </MButton>
         </MAppBar>
     </MobileContent>
-</AppBar>
+</MultiDisplay>
 
 <div class="mb-8 px-2">
     <MSubheader Class="px-0">
