feat(Tag) : update AddTag and SelectedTags

--- a/NoDecentDiary/Pages/PageWrite.razor
+++ b/NoDecentDiary/Pages/PageWrite.razor
@@ -128,5 +128,6 @@
 </MContainer>
 
 <SelectTags @bind-Value="showSelectTag"
-            @bind-Items="SelectedTags">
+            @bind-Items="SelectedTags"
+            OnSave="HandOnSaveSelectTags">
 </SelectTags>
