feat(PageWrite) : update

--- a/NoDecentDiary/Pages/PageWrite.razor
+++ b/NoDecentDiary/Pages/PageWrite.razor
@@ -14,7 +14,7 @@
 
     <MButton Class="d-sm-none"
              Icon
-             Href="/Tag">
+             OnClick="()=>showSelectTag = true">
         <MIcon>
             mdi-label-outline
         </MIcon>
