fix(SelectTags) : add validation

--- a/NoDecentDiary/Shared/SelectTags.razor
+++ b/NoDecentDiary/Shared/SelectTags.razor
@@ -11,7 +11,7 @@
             </MButton>
         </MCardTitle>
         <MCardText Style="max-height:200px;">
-            <MChipGroup @bind-Values="SelectedTags"
+            <MChipGroup @bind-Values="SelectedTagIndices"
                         Column
                         Multiple>
                 @foreach (var item in Tags)
