feat(DiaryCard) : Realized label function and fix some styles

--- a/NoDecentDiary/Pages/PageWrite.razor
+++ b/NoDecentDiary/Pages/PageWrite.razor
@@ -88,7 +88,7 @@
                     TValue="string"
                     HideDetails="@("auto")"
                     Class="pb-0"
-                    Counter="20"
+                    Dense
                     maxlength="20"
                     Placeholder="请输入标题">
             </MTextField>
