--- a/NoDecentDiary/Shared/DiaryCard.razor
+++ b/NoDecentDiary/Shared/DiaryCard.razor
@@ -31,7 +31,7 @@
 
                 <ChildContent>
                     <MList MinWidth="150">
-                        <MListItem Dense>
+                        <MListItem Dense OnClick="OnTag">
                             <MListItemContent>
                                 标签
                             </MListItemContent>
