--- a/NoDecentDiary/Shared/DiaryCardList.razor
+++ b/NoDecentDiary/Shared/DiaryCardList.razor
@@ -14,6 +14,7 @@
     if (!item.Top)
     {
         <DiaryCard Value="item"
+           OnTag="()=>Tag(item)"
            OnCopy="()=>Copy(item)"
            OnDelete="()=>Delete(item)"
            OnTopping="()=>Topping(item)">
