--- a/NoDecentDiary/Pages/Index.razor.css
+++ b/NoDecentDiary/Pages/Index.razor.css
@@ -1,1 +1,9 @@
-﻿
+﻿::deep .tag-card {
+    width: 100%;
+}
+
+@media screen and (min-width:600px){
+    ::deep .tag-card {
+        width: 48%;
+    }
+}
