feat(Index) : change styles

--- a/NoDecentDiary/Pages/Index.razor
+++ b/NoDecentDiary/Pages/Index.razor
@@ -7,8 +7,8 @@
            ActiveClass="text-h6 font-weight-bold"
            HideSlider
            Color="black">
-        <MTab Class="m-tab-remove-hover">全部</MTab>
-        <MTab Class="m-tab-remove-hover">标签</MTab>
+        <MTab Class="m-tab-swiper">全部</MTab>
+        <MTab Class="m-tab-swiper">标签</MTab>
     </MTabs>
     <MSpacer></MSpacer>
     <MButton Large Icon>
