--- a/NoDecentDiary/Shared/SelectTags.razor
+++ b/NoDecentDiary/Shared/SelectTags.razor
@@ -40,6 +40,7 @@
     </MCard>
 </MDialog>
 
-<AddTag @bind-Value="DialogAddTag"
+<InputTag @bind-Value="DialogAddTag"
         @bind-Text="AddTagName"
-        OnSave="HandleOnSaveAddTag"></AddTag>
+        Title="添加标签"
+        OnSave="HandleOnSaveAddTag"></InputTag>
