--- a/NoDecentDiary/Shared/InputTag.razor
+++ b/NoDecentDiary/Shared/InputTag.razor
@@ -9,10 +9,9 @@
                 <MIcon>mdi-close</MIcon>
             </MButton>
         </MCardTitle>
-        <MCardText>
+        <MCardText Class="pb-0">
             <MTextField Value="Text"
                         ValueChanged="TextChanged"
-                        Class="pb-0"
                         Dense
                         HideDetails="@("auto")"
                         Outlined
