--- a/NoDecentDiary/Pages/Index.razor
+++ b/NoDecentDiary/Pages/Index.razor
@@ -7,8 +7,14 @@
            ActiveClass="text-h6 font-weight-bold"
            HideSlider
            Color="black">
-        <MTab Class="m-tab-swiper">全部</MTab>
-        <MTab Class="m-tab-swiper">标签</MTab>
+        <MTab Class="m-tab-swiper"
+              OnClick="UpdateDiaries">
+            全部
+        </MTab>
+        <MTab Class="m-tab-swiper"
+              OnClick="UpdateTags">
+            标签
+        </MTab>
     </MTabs>
     <MSpacer></MSpacer>
     <MButton Large Icon>
@@ -39,7 +45,7 @@
             {
                 <MCard Class="mb-5 tag-card"
                    Rounded="@("lg")">
-                    <MListItem>
+                    <MListItem OnClick="HandOnTagClick">
                         <MListItemIcon>
                             <MIcon>
                                 mdi-label-outline
@@ -51,28 +57,33 @@
                         </MListItemContent>
 
                         <MListItemAction>
-                            <MMenu>
-                                <ActivatorContent>
-                                    <MButton Icon
-                                         @attributes="@context.Attrs">
-                                        <MIcon>mdi-pencil</MIcon>
-                                    </MButton>
-                                </ActivatorContent>
-                                <ChildContent>
-                                    <MList MinWidth="150">
-                                        <MListItem Dense OnClick="()=>HandOnTagRename(item)">
-                                            <MListItemContent>
-                                                重命名
-                                            </MListItemContent>
-                                        </MListItem>
-                                        <MListItem Dense>
-                                            <MListItemContent>
-                                                删除
-                                            </MListItemContent>
-                                        </MListItem>
-                                    </MList>
-                                </ChildContent>
-                            </MMenu>
+                            <div @onclick:stopPropagation="true">
+                                <MMenu Rounded="@("lg")"
+                                   Bottom
+                                   Left
+                                   Transition="scroll-x-reverse-transition">
+                                    <ActivatorContent>
+                                        <MButton Icon
+                                             @attributes="@context.Attrs">
+                                            <MIcon>mdi-pencil</MIcon>
+                                        </MButton>
+                                    </ActivatorContent>
+                                    <ChildContent>
+                                        <MList MinWidth="150">
+                                            <MListItem Dense OnClick="()=>HandOnTagRename(item)">
+                                                <MListItemContent>
+                                                    重命名
+                                                </MListItemContent>
+                                            </MListItem>
+                                            <MListItem Dense OnClick="()=>HandOnTagDelete(item)">
+                                                <MListItemContent>
+                                                    删除
+                                                </MListItemContent>
+                                            </MListItem>
+                                        </MList>
+                                    </ChildContent>
+                                </MMenu>
+                            </div>
                         </MListItemAction>
                     </MListItem>
                 </MCard>
