feat(Index) : Tab close Ripple

--- a/NoDecentDiary/Pages/Index.razor
+++ b/NoDecentDiary/Pages/Index.razor
@@ -8,10 +8,12 @@
            HideSlider
            Color="black">
         <MTab Class="m-tab-swiper"
+              Ripple="false"
               OnClick="UpdateDiaries">
             全部
         </MTab>
         <MTab Class="m-tab-swiper"
+              Ripple="false"
               OnClick="UpdateTags">
             标签
         </MTab>
